--- a/source/_posts/18-11-29-博客搭建.md
+++ b/source/_posts/18-11-29-博客搭建.md
@@ -6,15 +6,19 @@ title: Melody 主题博客搭建
 ## 博客搭建
 说说这个博客的简易搭建过程吧，以及把本地的博客项目托管到GitHub
 
-### 1、首先要确保你安装了node：https://nodejs.org/zh-cn/
+### 首先要确保你安装了 node：
+https://nodejs.org/zh-cn/
 
-### 2、然后随便一个文件夹git bash，建立本地分支和远端分支关联
+### 然后在文件夹 git bash
+这里是为了建立本地分支和远端分支关联
 
 ```
 git init
 ```
 
-### 3、安装博客系统Hexo脚手架： https://hexo.io/zh-cn/  之后的开发和主题配置都是基于Hexo-cli开展的
+### 安装博客系统 Hexo脚手架： 
+https://hexo.io/zh-cn/  
+之后的开发和主题配置都是基于Hexo-cli开展的
 
 
 ```
@@ -24,40 +28,42 @@ cd blog
 npm install
 ```
 
-### 4、Melody 博客主题克隆地址：https://github.com/Molunerfinn/hexo-theme-melody
+### Melody 博客主题克隆
+https://github.com/Molunerfinn/hexo-theme-melody
 
 
 ```
 git clone -b master https://github.com/Molunerfinn/hexo-theme-melody themes/melody
 ```
 
-### 5、然后找到Hexo目录下的 _config.yml文件并修改:
+### 修改Hexo目录下的 _config.yml文件
 
 ```
 theme: melody
 ```
 
-### 6、如果没有pug和stylus解析器则安装
+### 安装 pug 和 stylus 解析器
 
 ```
 npm install hexo-renderer-jade hexo-renderer-stylus --save
 ```
 
-### 7、主题运行效果预览（到这里博客系统搭建完毕，如果不需要托管，下面可忽略）
+### 主题运行效果预览
+到这里博客系统搭建完毕，如果不需要托管，下面可忽略
 
 ```
 hexo server
 ```
 
-
-### 8、在你的GitHub上新建一个仓库（没有可以申请一个GitHub账号~）
+### 新建 GitHub仓库
+没有可以申请一个GitHub账号~
 
 ```
 创建仓库教程省略啦~
 ```
 
 
-### 9、建立本地仓库和远程仓库关联并提交
+### 建立本地仓库和远程仓库关联并提交
 
 ```
 git remote add origin https://github.com/Neokekeke/xxx.git
@@ -66,9 +72,8 @@ git commit -m "hexo博客"
 git push -u origin master
 ```
 
-### 新建博文简单命令
-
-## Quick Start
+---
+## 新建博文
 
 ``` bash
 $ hexo new "My New Post"
