--- a/source/_posts/18-11-29-博客搭建.md
+++ b/source/_posts/18-11-29-博客搭建.md
@@ -6,8 +6,9 @@ title: Melody 主题博客搭建
 ## 博客搭建
 说说这个博客的简易搭建过程吧，以及把本地的博客项目托管到GitHub
 
-### 首先要确保你安装了 node：
-https://nodejs.org/zh-cn/
+### 首先要确保你安装了 node 和 Git：
+noed：https://nodejs.org/zh-cn/
+git：https://git-scm.com/
 
 ### 然后在文件夹 git bash
 这里是为了建立本地分支和远端分支关联
